--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
     <textarea id="message" name="message" rows="4" required></textarea>
 
     <button type="submit">Kirim Pesan</button>
+        <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </form>
 </main>
 <script>
