--- a/disclaimer.html
+++ b/disclaimer.html
@@ -16,6 +16,7 @@
     Konten kami disediakan hanya untuk referensi dan hiburan. Dilarang memperbanyak, menduplikasi, atau memperjualbelikan
     cerita tanpa izin tertulis dari kami. Seluruh konten dilindungi oleh Undang-Undang Hak Cipta.
   </p>
+      <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
 </body>
 </html>
