--- a/privacy.html
+++ b/privacy.html
@@ -16,6 +16,7 @@
     Dengan mengunjungi situs ini, Anda setuju bahwa informasi umum kunjungan Anda (seperti browser, waktu akses) mungkin dikumpulkan
     oleh pihak ketiga penyedia iklan. Kami tidak menjual atau membagikan data Anda kepada pihak lain tanpa izin Anda.
   </p>
+      <a class="btn-kembali" href="index.html">⬅ Kembali</a>
 </main>
 </body>
 </html>
