--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,12 @@
   </ul>
 
   <h3>Form Kontak</h3>
-  <form onsubmit="sendMessage(event)">
+  <form name="contact" netlify netlify-honeypot="bot-field" method="POST">
+    <input type="hidden" name="form-name" value="contact">
+    <p hidden>
+      <label>Jangan diisi <input name="bot-field"></label>
+    </p>
+
     <label for="name">Nama</label>
     <input type="text" id="name" name="name" required>
 
@@ -30,15 +35,8 @@
     <textarea id="message" name="message" rows="4" required></textarea>
 
     <button type="submit">Kirim Pesan</button>
-        <a class="btn-kembali" href="index.html">⬅ Kembali</a>
+    <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </form>
 </main>
-<script>
-function sendMessage(event) {
-  event.preventDefault();
-  alert("Terima kasih! Pesan Anda telah dikirim.");
-  event.target.reset();
-}
-</script>
 </body>
 </html>
