--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Koleksi Cerita - Perpustakaan Digital</title>
-  <style>
-  /* Reset */
-*, *::before, *::after {
+  <script>
+    *, *::before, *::after {
     box-sizing: border-box;
 }
 body {
@@ -142,6 +141,17 @@ footer a {
     color: #00bfa5;
     margin: 0 10px;
 }
+#tts-warning {
+    display: none;
+    background: #ff9800;
+    color: #121212;
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+    position: sticky;
+    bottom: 0;
+    z-index: 1000;
+}
 @media (max-width: 600px) {
     .ebook-grid {
         grid-template-columns: repeat(2, 1fr);
@@ -171,13 +181,13 @@ footer a {
         height: 240px;
     }
 }
-</style>
+</script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
 <body>
   <header>
-    <div class="logo" id="logo-text">Story Collection</div>
+    <div class="logo" id="logo-text">Koleksi Cerita</div>
     <nav>
       <input type="search" id="search-input" placeholder="Cari judul atau genre..." />
     </nav>
@@ -201,6 +211,11 @@ footer a {
     </div>
     &copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.
   </footer>
+
+  <div id="tts-warning">
+    ⚠️ Untuk suara bahasa Indonesia, aktifkan TTS Indonesia di 
+    <strong>Pengaturan > Bahasa & masukan > Keluaran Teks ke Suara</strong>
+  </div>
 
   <script>
     const firebaseConfig = {
@@ -231,7 +246,8 @@ footer a {
         privacy: '🔒 Kebijakan Privasi',
         contact: '☎️ Kontak',
         disclaimer: '⚠️ Disclaimer',
-        copyright: '&copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.'
+        copyright: '&copy; 2024 Perpustakaan Digital - Semua hak cipta dilindungi.',
+        read: 'Baca Cerita'
       },
       en: {
         logo: 'Story Collection',
@@ -242,7 +258,8 @@ footer a {
         privacy: '🔒 Privacy Policy',
         contact: '☎️ Contact',
         disclaimer: '⚠️ Disclaimer',
-        copyright: '&copy; 2024 Digital Library - All rights reserved.'
+        copyright: '&copy; 2024 Digital Library - All rights reserved.',
+        read: 'Read Story'
       }
     };
 
@@ -250,8 +267,7 @@ footer a {
       document.getElementById('logo-text').textContent = texts[lang].logo;
       document.getElementById('main-title').textContent = texts[lang].mainTitle;
       searchInput.placeholder = texts[lang].searchPlaceholder;
-      const footer = document.getElementById('footer-text');
-      footer.innerHTML = `
+      document.getElementById('footer-text').innerHTML = `
         <div>
           <a href="about.html">${texts[lang].about}</a>
           <a href="privacy.html">${texts[lang].privacy}</a>
@@ -275,10 +291,10 @@ footer a {
           <img src="${cerita.gambar || ''}" alt="Cover ${cerita.judul}" />
           <h2>${cerita.judul}</h2>
           <div class="author">${cerita.genre}</div>
-          <div class="category"><a href="story.html?id=${cerita.key}">${currentLang === 'id' ? 'Baca Cerita' : 'Read Story'}</a></div>
+          <div class="category"><a href="story.html?id=${cerita.key}">${texts[currentLang].read}</a></div>
         `;
         card.addEventListener('click', () => {
-          speakText(cerita.judul + ', ' + cerita.genre);
+          speakText(`${cerita.judul}, ${cerita.genre}`);
         });
         grid.appendChild(card);
       });
@@ -294,14 +310,33 @@ footer a {
 
     function speakText(text) {
       const msg = new SpeechSynthesisUtterance(text);
-      msg.lang = currentLang === 'id' ? 'id-ID' : 'en-GB';
+      const voices = window.speechSynthesis.getVoices();
+      const targetLang = currentLang === 'id' ? 'id' : 'en';
+      const voice = voices.find(v => v.lang.startsWith(targetLang));
+      if (voice) {
+        msg.voice = voice;
+      } else {
+        msg.lang = currentLang === 'id' ? 'id-ID' : 'en-GB';
+      }
       window.speechSynthesis.speak(msg);
+    }
+
+    function checkTTSAvailability() {
+      const voices = window.speechSynthesis.getVoices();
+      const hasIdVoice = voices.some(v => v.lang.startsWith('id'));
+      const warning = document.getElementById('tts-warning');
+      if (currentLang === 'id' && !hasIdVoice) {
+        warning.style.display = 'block';
+      } else {
+        warning.style.display = 'none';
+      }
     }
 
     langSelect.addEventListener('change', () => {
       currentLang = langSelect.value;
       updateTexts(currentLang);
       filterCerita(searchInput.value);
+      checkTTSAvailability();
     });
 
     db.ref('cerita').on('value', snap => {
@@ -313,6 +348,10 @@ footer a {
     searchInput.addEventListener('input', e => {
       filterCerita(e.target.value);
     });
+
+    window.speechSynthesis.onvoiceschanged = () => {
+      checkTTSAvailability();
+    };
 
     updateTexts(currentLang);
   </script>
