--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a {
 header {
     background: linear-gradient(135deg, #4b0082 0%, #00bfa5 100%);
     padding: 16px 24px;
-    position: sticky;
+    position:  relative;
     top: 0;
     z-index: 1000;
     box-shadow: 0 4px 12px rgba(0,0,0,0.6);
