--- a/index.html
+++ b/index.html
@@ -4,182 +4,225 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Koleksi Cerita - Perpustakaan Digital</title>
- <style>
-    *, *::before, *::after {
-    box-sizing: border-box;
+
+<style>
+  *, *::before, *::after {
+  box-sizing: border-box;
 }
+
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background: #121212;
-    color: #e0e0e0;
-    line-height: 1.6;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #121212;
+  color: #e0e0e0;
+  line-height: 1.6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
+
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
+
 header {
-    background: linear-gradient(135deg, #4b0082 0%, #00bfa5 100%);
-    padding: 16px 24px;
-    position:  relative;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.6);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 12px;
+  background: linear-gradient(135deg, #4b0082 0%, #00bfa5 100%);
+  padding: 16px 24px;
+  position: relative;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 12px;
 }
+
 header .logo {
-    font-weight: 900;
-    font-size: 28px;
-    background: linear-gradient(135deg, #e040fb, #00bfa5);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    user-select: none;
+  font-weight: 900;
+  font-size: 28px;
+  background: linear-gradient(135deg, #e040fb, #00bfa5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  user-select: none;
 }
+
 header nav {
-    flex: 1 1 280px;
+  flex: 1 1 280px;
 }
+
 header nav input[type="search"] {
-    width: 100%;
-    padding: 8px 16px;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    background: rgba(255,255,255,0.2);
-    color: white;
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: rgba(255,255,255,0.2);
+  color: white;
 }
+
 header nav input[type="search"]::placeholder {
-    color: rgba(255,255,255,0.7);
+  color: rgba(255,255,255,0.7);
 }
+
 header select {
-    background: rgba(255,255,255,0.2);
-    border: none;
-    padding: 6px 12px;
-    border-radius: 12px;
-    color: #fff;
-    font-size: 14px;
+  background: rgba(255,255,255,0.2);
+  border: none;
+  padding: 6px 12px;
+  border-radius: 12px;
+  color: #fff;
+  font-size: 14px;
 }
+
 main {
-    padding: 32px 16px;
-    flex: 1;
+  padding: 32px 16px;
+  flex: 1;
 }
+
 h1 {
-    font-size: 2.5rem;
-    font-weight: 900;
-    margin-bottom: 32px;
-    text-align: center;
-    background: linear-gradient(135deg, #e040fb, #00bfa5);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin-bottom: 32px;
+  text-align: center;
+  background: linear-gradient(135deg, #e040fb, #00bfa5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
 .ebook-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 16px;
-    padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 16px;
+  padding: 0;
 }
+
 .card {
-    background: rgba(255, 255, 255, 0.06);
-    border-radius: 12px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-    cursor: pointer;
+  background: rgba(255, 255, 255, 0.06);
+  border-radius: 12px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  cursor: pointer;
 }
+
 .card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 24px rgba(0,191,165,0.5);
+  transform: translateY(-4px);
+  box-shadow: 0 8px 24px rgba(0,191,165,0.5);
 }
+
 .card img {
-    width: 140px;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 8px;
-    background: #262626;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    margin-bottom: 8px;
+  width: 140px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
+  background: #262626;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  margin-bottom: 8px;
 }
+
 .card h2 {
-    font-size: 0.9rem;
-    text-align: center;
-    margin: 4px 0;
-    color: #00bfa5;
+  font-size: 0.9rem;
+  text-align: center;
+  margin: 4px 0;
+  color: #00bfa5;
 }
+
 .card .author {
-    font-size: 0.75rem;
-    color: #b0bec5;
-    text-align: center;
-    margin-bottom: 4px;
+  font-size: 0.75rem;
+  color: #b0bec5;
+  text-align: center;
+  margin-bottom: 4px;
 }
+
 .card .category {
-    font-size: 0.7rem;
-    background: rgba(0,191,165,0.2);
-    color: #00bfa5;
-    padding: 2px 6px;
-    border-radius: 12px;
-    text-align: center;
+  font-size: 0.7rem;
+  background: rgba(0,191,165,0.2);
+  color: #00bfa5;
+  padding: 2px 6px;
+  border-radius: 12px;
+  text-align: center;
 }
+
+.card .rating, .card .views {
+  font-size: 0.7rem;
+  text-align: center;
+  margin: 2px 0;
+}
+
+.card .rating {
+  color: #ffa726; /* orange rating */
+}
+
+.card .views {
+  color: #90caf9; /* light blue views */
+}
+
 footer {
-    background: #1a1a1a;
-    color: #606060;
-    padding: 24px 16px;
-    text-align: center;
-    flex-shrink: 0;
+  background: #1a1a1a;
+  color: #606060;
+  padding: 24px 16px;
+  text-align: center;
+  flex-shrink: 0;
 }
+
 footer a {
-    color: #00bfa5;
-    margin: 0 10px;
+  color: #00bfa5;
+  margin: 0 10px;
 }
+
 #tts-warning {
-    display: none;
-    background: #ff9800;
-    color: #121212;
-    padding: 10px;
-    text-align: center;
-    font-size: 14px;
-    position: sticky;
-    bottom: 0;
-    z-index: 1000;
+  display: none;
+  background: #ff9800;
+  color: #121212;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  position: sticky;
+  bottom: 0;
+  z-index: 1000;
 }
+
 @media (max-width: 600px) {
-    .ebook-grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 12px;
-    }
-    .card img {
-        width: 120px;
-        height: 160px;
-    }
-    .card h2 {
-        font-size: 0.8rem;
-    }
-    .card .author {
-        font-size: 0.7rem;
-    }
-    .card .category {
-        font-size: 0.65rem;
-    }
+  .ebook-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
+  }
+  .card img {
+    width: 120px;
+    height: 160px;
+  }
+  .card h2 {
+    font-size: 0.8rem;
+  }
+  .card .author {
+    font-size: 0.7rem;
+  }
+  .card .category {
+    font-size: 0.65rem;
+  }
 }
+
+@media (max-width: 400px) {
+  .card .rating, .card .views {
+    font-size: 0.8rem;
+  }
+}
+
 @media (min-width: 768px) {
-    .ebook-grid {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 20px;
-    }
-    .card img {
-        width: 180px;
-        height: 240px;
-    }
+  .ebook-grid {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+  }
+  .card img {
+    width: 180px;
+    height: 240px;
+  }
 }
 </style>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -291,10 +334,13 @@ footer a {
           <img src="${cerita.gambar || ''}" alt="Cover ${cerita.judul}" />
           <h2>${cerita.judul}</h2>
           <div class="author">${cerita.genre}</div>
+          <div class="rating">⭐ ${cerita.rating || '0.0'}</div>
+          <div class="views">👁 ${cerita.views || 0} ${currentLang === 'id' ? 'dilihat' : 'views'}</div>
           <div class="category"><a href="story.html?id=${cerita.key}">${texts[currentLang].read}</a></div>
         `;
         card.addEventListener('click', () => {
           speakText(`${cerita.judul}, ${cerita.genre}`);
+          db.ref(`cerita/${cerita.key}/views`).transaction(current => (current || 0) + 1);
         });
         grid.appendChild(card);
       });
