--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Koleksi Cerita - Perpustakaan Digital</title>
+  <!-- META SEO -->
+  <meta name="description" content="Koleksi e-book, cerita fantasi, cerita roman, dan hiburan cerita menarik di Perpustakaan Digital. Baca gratis dan nikmati pengalaman membaca online." />
+  <meta name="keywords" content="e-book, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
+  <meta name="author" content="Perpustakaan Digital" />
+  <meta name="robots" content="index, follow" />
 
+  <!-- Open Graph untuk social media -->
+  <meta property="og:title" content="Koleksi Cerita - Perpustakaan Digital" />
+  <meta property="og:description" content="Koleksi e-book, cerita fantasi, roman, dan cerita hiburan lainnya. Baca cerita online gratis di Perpustakaan Digital." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourwebsite.com" />
+  <meta property="og:image" content="https://yourwebsite.com/assets/cover.jpg" />
+  
 <style>
   *, *::before, *::after {
   box-sizing: border-box;
