--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Koleksi Cerita - Perpustakaan Digital</title>
+  <link rel="icon" href="images/FAVVV.png" type="image/png">
   <!-- META SEO -->
   <meta name="description" content="Koleksi e-book, cerita fantasi, cerita roman, dan hiburan cerita menarik di Perpustakaan Digital. Baca gratis dan nikmati pengalaman membaca online." />
   <meta name="keywords" content="e-book, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
