--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 <main>
   <h2>Kontak Kami</h2>
   <p>
-    Silakan hubungi kami melalui email <a href="mailto:fahril0616@gmail.com">info@amdf.web.id</a> atau melalui media sosial:
+    Silakan hubungi kami melalui email <a href="mailto:info@amdf.web.id">info@amdf.web.id</a> atau melalui media sosial:
   </p>
   <ul>
     <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">ahmad.fahril16</a></li>
-    <li>WhatsApp: <a href="https://wa.me/6281936421610" target="_blank">081936421610</a></li>
+    <li>WhatsApp: <a href="kunci.html" target="_blank">WA</a></li>
   </ul>
 
   <h3>Form Kontak</h3>
