--- a/contact.html
+++ b/contact.html
@@ -11,29 +11,12 @@
 <main>
   <h2>Kontak Kami</h2>
   <p>
-    Silakan hubungi kami melalui email <a href="mailto:info@amdf.web.id">info@amdf.web.id</a> atau melalui media sosial:
+    Silakan hubungi kami melalui email <a href="mailto:info@amdf.web.id">📧</a> atau melalui media sosial:
   </p>
   <ul>
-    <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">ahmad.fahril16</a></li>
-    <li>WhatsApp: <a href="kunci.html" target="_blank">WA</a></li>
+    <li>Instagram: <a href="https://www.instagram.com/ahmad.fahril16/?utm_source=qr#" target="_blank">📷</a></li>
+    <li>WhatsApp: <a href="kunci.html" target="_blank">☎️</a></li>
   </ul>
-
-  <h3>Form Kontak</h3>
-  <form name="contact" netlify netlify-honeypot="bot-field" method="POST">
-    <input type="hidden" name="form-name" value="contact">
-    <p hidden>
-      <label>Jangan diisi <input name="bot-field"></label>
-    </p>
-
-    <label for="name">Nama</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Pesan</label>
-    <textarea id="message" name="message" rows="4" required></textarea>
-
     <button type="submit">Kirim Pesan</button>
     <a class="btn-kembali" href="index.html">⬅ Kembali</a>
   </form>
