--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Koleksi Cerita - Perpustakaan Digital</title>
   <link rel="icon" href="images/FAVVV.png" type="image/png">
   <meta name="description" content="Koleksi e-book, cerita fantasi, cerita roman, dan hiburan cerita menarik di Perpustakaan Digital. Baca gratis dan nikmati pengalaman membaca online." />
-  <meta name="keywords" content="e-book, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
+  <meta name="keywords" content="ebook, cerita fantasi, cerita roman, hiburan cerita, koleksi cerita, perpustakaan digital, cerita online, buku gratis, bacaan online, cerita anak, cerita petualangan, novel digital" />
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
